--- a/CSS/Affichage/Affichage.css
+++ b/CSS/Affichage/Affichage.css
@@ -1,16 +1,14 @@
 .AffichagePageEntiere {
-    display: flex;
-    width: 69%;
+
+    width: 71.5%;
     height: auto;
-    justify-content: center;
-    align-items: center;
     margin: auto;
     margin-top: 20px;
 }
 
 .AffichageGauche,
 .AffichageDroite {
-    border: 2px solid black;
+    border: 1px solid black;
     border-radius: 8px;
     background-color: whitesmoke;
     margin: 20px;
@@ -19,11 +17,44 @@
 .AffichageDeuxButton {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 5px;
     margin: 0 5px 0 5px;
 }
 
+.ButtonAffichageSousResult,
+.AffichageButtonSousReset {
+    background-color: #fff;
+    border: 0 solid #e2e8f0;
+    border-radius: 1.5rem;
+    box-sizing: border-box;
+    color: #0d172a;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1.1rem;
+    font-weight: 600;
+    line-height: 1;
+    padding: 1rem 1.6rem;
+    text-align: center;
+    text-decoration: none #0d172a solid;
+    text-decoration-thickness: auto;
+    transition: all .1s cubic-bezier(.4, 0, .2, 1);
+    box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.ButtonAffichageSousResult:hover {
+    background-color: #1e293b;
+    color: #fff;
+}
+
+
+.AffichageButtonSousReset:hover {
+    background-color: #1e293b;
+    color: #fff;
+}
 
 
 
