--- a/CSS/Composent/Composent.css
+++ b/CSS/Composent/Composent.css
@@ -106,8 +106,9 @@ input[type='radio']:checked:after {
 
 .Composent_Tranding_Range_General {
     text-align: center;
-    width: 100%;
+    
     margin: 0 auto;
+    width: 90%;
 }
 
 .Composent_Trading_Range {
@@ -117,7 +118,99 @@ input[type='radio']:checked:after {
 
 }
 
-
+input[type=range] {
+    height: 25px;
+    background-color: whitesmoke;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%;
+  }
+  input[type=range]:focus {
+    outline: none;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 7px;
+    cursor: pointer;
+    box-shadow: 0px 0px 0px #50555C;
+    background: #1e293b;
+    border-radius: 50px;
+    border: 0px solid #000000;
+  }
+  input[type=range]::-webkit-slider-thumb {
+    box-shadow: 0px 0px 10px #000000;
+    border: 2px solid #000000;
+    height: 17px;
+    width: 17px;
+    border-radius: 25px;
+    background: #1e293b;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -6px;
+  }
+  input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #50555C;
+  }
+  input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 7px;
+    cursor: pointer;
+    
+    box-shadow: 0px 0px 0px #50555C;
+    background: #50555C;
+    border-radius: 50px;
+    border: 0px solid #000000;
+  }
+  input[type=range]::-moz-range-thumb {
+    box-shadow: 0px 0px 10px #000000;
+    border: 2px solid #000000;
+    height: 17px;
+    width: 17px;
+    border-radius: 25px;
+    background: #000000;
+    cursor: pointer;
+  }
+  input[type=range]::-ms-track {
+    width: 100%;
+    height: 7px;
+    cursor: pointer;
+    
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+  }
+  input[type=range]::-ms-fill-lower {
+    background: #50555C;
+    border: 0px solid #000000;
+    border-radius: 100px;
+    box-shadow: 0px 0px 0px #50555C;
+  }
+  input[type=range]::-ms-fill-upper {
+    background: #50555C;
+    border: 0px solid #000000;
+    border-radius: 100px;
+    box-shadow: 0px 0px 0px #50555C;
+  }
+  input[type=range]::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 0px 0px 10px #000000;
+    border: 2px solid #000000;
+    height: 17px;
+    width: 17px;
+    border-radius: 25px;
+    background: #000000;
+    cursor: pointer;
+  }
+  input[type=range]:focus::-ms-fill-lower {
+    background: #50555C;
+  }
+  input[type=range]:focus::-ms-fill-upper {
+    background: #50555C;
+  }
+  
+.Composent_Trading_LevierValue {
+    font-size: 1.3rem;
+}
 
 .Composent_Capitilusation_General {
     display: flex;
