--- a/CSS/Composent/Composent.css
+++ b/CSS/Composent/Composent.css
@@ -10,6 +10,7 @@
     width: 100%;
     margin: 0;
     font-size: 1rem;
+    margin-bottom: 10px;
     
 
 }
@@ -73,22 +74,22 @@ input[type='radio']:checked:after {
 }
 
 .Composent_Trading_Button {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     display: flex;
     justify-content: center;
     width: 100%;
 }
 
 .Composent_Staking_Button {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     display: flex;
     justify-content: center;
     width: 85%;
 }
 
 .Composent_TradingButton_Selection {
-    font-size: 20px;
-    margin: 0px 9px 0px 9px;
+    font-size: 18px;
+    margin: 0px 15px 0px 15px;
     flex-grow: 1;
     max-width: calc(100% / 4);
     white-space: nowrap;
@@ -97,12 +98,34 @@ input[type='radio']:checked:after {
 }
 
 .Composent_TradingButton_Selection_Staking {
-    font-size: 14px;
+    font-size: 16px;
     margin: 0px 15px 0px 15px;
     flex-grow: 1;
     max-width: calc(100% / 4);
     white-space: nowrap;
 }
+
+
+.select{
+    height: 30px;  
+  width: 200px;
+    margin-bottom: 20px;
+    border-radius: 0.7rem;
+    
+}
+select {
+  background-color: #1e293b;
+  color: white;
+  box-shadow: none;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.7rem;
+  font-size: 1.1rem;
+}
+
+
+
 
 .Composent_Tranding_Range_General {
     text-align: center;
@@ -216,17 +239,61 @@ input[type=range] {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 85%;
-    margin: 0 auto;
+    width: 200px;
+    margin: auto;
     text-align: center;
     margin-top: 10px;
+    
 }
 
 .Composent_AutoCompound {
     margin-top: 10px;
+    margin-left: 5%;
 }
 
 
+.Composent_Capitilusation_General {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    margin: auto;
+    text-align: center;
+    margin-top: 10px;
+    
+}
+
+.Composent_AutoCompound {
+    margin-top: 10px;
+    margin-left: 5%;
+}
+
+
+input[type=checkbox] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+}
+input[type=checkbox] {
+    -border-radius: 4px;
+    height: 15px;
+    width: 15px;
+    background: #fff;
+    border: 1px solid #1e293b;
+}
+input[type="checkbox"]:checked {
+    background: #1e293b;
+    margin:0px;
+    position: relative;
+    &:before {
+      font-family: FontAwesome;
+      content: '\f00c';
+      display: block;
+      color: rgb(255, 255, 255);
+      font-size: 14px;
+      position: absolute;
+    }
+  }
 
 .Composent_ClassBOX {
     display: flex;
