--- a/CSS/Affichage/Affichage.css
+++ b/CSS/Affichage/Affichage.css
@@ -104,4 +104,72 @@
         margin: 0 5px 0 5px;
     }
 
+    footer {
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        padding: 5px;
+        text-align: center;
+        border-top: 1px solid #e0e0e0;
+    }
+    
+    footer div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    
+    footer p {
+        margin: 0;
+        padding-right: 10px;
+        font-size: 1rem;
+    }
+    
+    footer a {
+        color: #007bff;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    
+    footer a:hover {
+        text-decoration: underline;
+    }
+    
+    footer img {
+        height: 50px;
+        vertical-align: middle;
+    }
+    
+    @media (max-width: 600px) {
+        footer p {
+            font-size: 0.9rem;
+            padding-right: 5px;
+        }
+    
+        footer img {
+            height: 40px;
+        }
+    }
+
+    .Responsive-logo-icon-menu {
+        height: auto;
+        width: 100px; 
+        max-width: 100%; 
+    }
+    
+    @media (max-width: 600px) {
+        .Responsive-logo-icon-menu {
+            width: 50px; 
+        }
+    }
+    
+    @media (min-width: 1200px) {
+        .Responsive-logo-icon-menu {
+            width: 150px;
+        }
+    }
+    
+
 }
